external-crates/move/crates/move-compiler/tests/move_2024/parser/macro_identifier_invalid_no_following_characters.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/macro_identifier_invalid_no_following_characters.move:2:19
  │
2 │     macro fun foo($
  │                   ^ Expected an identifier following '$', e.g. '$x'

error[E02007]: invalid 'fun' declaration
  ┌─ tests/move_2024/parser/macro_identifier_invalid_no_following_characters.move:3:1
  │
2 │     macro fun foo($
  │     ----- Function declared as 'macro' here
3 │ 
  │ ^ Invalid function declaration. 'native' functions cannot be 'macro'

